<resources>
    <string name="app_name">Daily Physic</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? <b>Sign up</b></string>
    <string name="im_a_teacher">Im a teacher</string>
    <string name="continue_as_student">Continue as student</string>
    <string name="it_s_easier_to_sign_in_now">It\'s easier to sign in now</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="we_have_been_waiting_for_you">We have been waiting for you</string>
    <string name="login">Login</string>
    <string name="back_to_parent">Back to parent</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create account!</string>
    <string name="sign_up_to_continue_to_the_app">Sign up to continue to the app</string>
    <string name="main_image">Main image</string>
    <string name="daftar_pelajaran">Daftar Pelajaran</string>
    <string name="student">Student</string>
    <string name="lesson">Lesson</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="daftar_pelajar">Daftar Pelajar</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="subject">Subject</string>
    <string name="level">Level</string>
    <string name="lesson_video_youtube_link">Lesson video (Youtube link)</string>
    <string name="question">Question</string>
    <string name="choose_your_image_that_contains_the_question">Choose your image that contains the question</string>
    <string name="upload_question">Upload Question</string>
    <string name="correct_answer">Correct answer</string>
    <string name="wrong_answer_1">Wrong answer 1</string>
    <string name="wrong_answer_2">Wrong answer 2</string>
    <string name="wrong_answer_3">Wrong answer 3</string>
    <string name="dot">.</string>
    <string name="submit">Submit</string>
    <string name="submit_answer">Submit answer</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="you_ve_already_complete_this_lesson">You\'ve already complete this lesson</string>
    <string name="out_of_100">out of 100</string>
    <string name="student_never_finish_any_lesson_quiz">Student never finish any lesson quiz</string>
    <string name="reserved_by_rumahawan">Reserved by <b>rumahawan</b></string>
</resources>
